FEAT: Full catalog entities

--- a/catalog.yaml
+++ b/catalog.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   targets:
     - ./catalog/apis/api-001.yaml
-    # - ./catalog/dataproducts/dataproduct-001.yaml
-    # - ./catalog/queries/query-001.yaml
-    # - ./catalog/schemas/schema-001.yaml
-    # - ./catalog/orgs/org-001.yaml
-    # - ./catalog/systems/system-001.yaml
+    - ./catalog/dataproducts/dataproduct-001.yaml
+    - ./catalog/queries/query-001.yaml
+    - ./catalog/schemas/schema-001.yaml
+    - ./catalog/orgs/org-001.yaml
+    - ./catalog/systems/system-001.yaml
