--- a/catalog/orgs/org-001.yaml
+++ b/catalog/orgs/org-001.yaml
@@ -18,7 +18,7 @@ spec:
 ---
 # https://backstage.io/docs/features/software-catalog/descriptor-format#kind-group
 apiVersion: backstage.io/v1alpha1
-kind: IT
+kind: Group
 metadata:
   name: IT
 spec:
