--- a/catalog/systems/system-001.yaml
+++ b/catalog/systems/system-001.yaml
@@ -2,7 +2,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: MyCompany
+  name: enterprise-systems
 spec:
   owner: guest
   domain: party-domain
@@ -11,7 +11,7 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: MyCompany
+  name: enterprise-systems
 spec:
   owner: guest
   domain: account-domain
@@ -20,7 +20,7 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: MyCompany
+  name: enterprise-systems
 spec:
   owner: guest
   domain: product-domain
@@ -29,7 +29,7 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: MyCompany
+  name: enterprise-systems
 spec:
   owner: guest
   domain: transaction-domain
